--- a/views/admin/admin-dashboard.ejs
+++ b/views/admin/admin-dashboard.ejs
@@ -14,6 +14,7 @@
             <tr>
               <th>#</th>
               <th>Title</th>
+              <th>Offer</th>
               <th>Price</th>
               <th>Category</th>
               <th>Image</th>
@@ -27,7 +28,15 @@
                   <tr class="align-middle">
                     <td><%= count++ %> </td>
                     <td><%= item.title %> </td>
-                    <td>₹<%= item.skus[0].price %> </td>
+                    <td><%= item.offerPercent?`${item.offerPercent}%` : 'None' %></td>
+                    <td>
+                      <div>
+                        <% if(item.offerPercent) {%> 
+                        <p class="text-muted m-0"><s class="text-muted">₹<%= item.skus[0].price %></s></p>
+                        <% } %> 
+                        <p>₹<%= item.offerPercent ? Math.round(item.skus[0].price - item.skus[0].price * item.offerPercent/100) : item.skus[0].price%></p>
+                      </div>
+                    </td>
                     <td><%= item.categoryId.categoryName %> </td>
                     <td><img class="image-table" src="/<%= item.skus[0].images[0] %> " alt=""></td>
                     <td><a href="/admin/products/view/<%= item._id %> " class="btn btn-primary">View Details</a></td>
