--- a/views/partials/admin/admin-navbar.ejs
+++ b/views/partials/admin/admin-navbar.ejs
@@ -15,6 +15,9 @@
           <a class="nav-link active nav-item" aria-current="page" href="/admin"><span class="un">Dashboard</span></a>
         </li>
         <li class="nav-item ps-4">
+          <a class="nav-link active nav-item" aria-current="page" href="/admin/returns"><span class="un">Returns</span></a>
+        </li>
+        <li class="nav-item ps-4">
           <a class="nav-link active nav-item" aria-current="page" href="/admin/categories"><span class="un">Categories</span></a>
         </li>
         <li class="nav-item ps-4">
