--- a/views/users/order-details.ejs
+++ b/views/users/order-details.ejs
@@ -19,6 +19,10 @@
             <p class="fw-bold text-end"><%= (order?.payment[0]?.refundStatus == 'processed' ? 'Refund Completed' : 'Refund Pending') %> </p>
           </div>
         <% } %>  
+      <% }else if(order.return){%>
+        <div>
+          <h3 class="fw-bold text-warning d-flex flex-column justify-content-between text-end">Return Status: <%= order.returnStatus %> </h3>
+        </div> 
       <% }else if(order.orderStatus == 'Delivered'){ %>
         <div>
           <h3 class="fw-bold text-success d-flex flex-column justify-content-between text-end">Order status: Delivered</h3>
@@ -75,7 +79,26 @@
         <a href="/invoice/download/<%= order._id %>" class="main-button text-decoration-none">Download Invoice</a>
         <% if(order.orderStatus != 'Delivered') {%> 
         <button class="sub-button ms-3" data-bs-toggle="modal" data-bs-target="#modal">Cancel Order</button>
-        <% } %> 
+        <% }else if(!order.return){ %>
+        <button class="sub-button" data-bs-toggle="modal" data-bs-target="#returnModal">Return Order</button>
+        <div class="modal fade" id="returnModal" tabindex="-1" aria-labelledby="returnModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="returnModalLabel">Return Order</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                Are you sure?
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="sub-button" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="main-button" onclick="returnOrder('<%= order._id %>')">Return</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <% } %>  
       </div>
       <% } %> 
     </div>
