--- a/views/users/orders.ejs
+++ b/views/users/orders.ejs
@@ -45,6 +45,10 @@
                 <div>
                   <p class="text-danger"><strong>Order Status: </strong>Cancelled</p>
                 </div>
+              <% }else if(order.return){ %> 
+                <div>
+                  <p class="text-warning"><strong>Refund Status: </strong><%= order.returnStatus %> </p>
+                </div>
               <% }else if(order.orderStatus == 'Delivered'){ %> 
                 <div>
                   <p class="text-success"><strong>Order Status: </strong>Delivered</p>
@@ -52,9 +56,6 @@
               <% }else{ %>
                 <div>
                   <p><strong>Order Status: </strong><%= order.orderStatus %> </p>
-                </div>
-                <div class="d-flex justify-content-between ms-3">
-                  <p>Payment Status: <%= order.paymentMethod == 'COD'? order.paymentMethod : (order.paymentVerified? 'Completed' : 'Pending') %>  </p>
                 </div>
               <% } %>   
             </div>
