Added pdf sales report

--- a/views/admin/dashboard/dashboard.ejs
+++ b/views/admin/dashboard/dashboard.ejs
@@ -70,10 +70,22 @@
       <a href="/admin/sales/download" class="text-decoration-none">
         <div class="card p-3 d-flex flex-row justify-content-center align-items-center">
           <div class="me-2">
-            <img class="download-icon" src="/assets/icons/download.png" alt="">
+            <img class="download-icon" src="/assets/icons/csv.png" alt="">
           </div>
           <div>
             <p class="m-0">Download Sales Report</p>
+          </div>
+        </div>
+      </a>
+    </div>
+    <div class="col-md-3">
+      <a href="/admin/sales/download/pdf" class="text-decoration-none">
+        <div class="card p-3 d-flex flex-row justify-content-center align-items-center">
+          <div class="me-2">
+            <img class="download-icon" src="/assets/icons/pdf.png" alt="">
+          </div>
+          <div>
+            <p class="m-0">Download PDF Sales Report</p>
           </div>
         </div>
       </a>
