--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -62,6 +62,17 @@
     </div>
   </div>
  </div>
+ <div class="toast-container position-fixed bottom-0 end-0 p-3 text-white">
+  <div id="liveToast" class="toast bg-danger" role="alert" aria-live="assertive" aria-atomic="true">
+    <div class="toast-header bg-danger text-white">
+      <strong class="me-auto">Kroma</strong>
+      <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+    </div>
+    <div class="toast-body">
+      Item out of stock
+    </div>
+  </div>
+</div>
 </section>
 <%- include('../partials/footer') %> 
 <script defer src="/script/userScript.js"></script>
